; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-import-dump.c_process_groupshort_row.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-import-dump.c_process_groupshort_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@I = common dso_local global i32* null, align 8
@gs_id = common dso_local global i64 0, align 8
@gs_subtype = common dso_local global i64 0, align 8
@MAX_GROUPS = common dso_local global i32 0, align 4
@GT = common dso_local global i32* null, align 8
@Gc = common dso_local global i32 0, align 4
@adj_rec = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @process_groupshort_row() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32*, i32** @I, align 8
  %4 = load i64, i64* @gs_id, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %1, align 4
  %7 = load i32*, i32** @I, align 8
  %8 = load i64, i64* @gs_subtype, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %1, align 4
  %12 = icmp sle i32 %11, 0
  br i1 %12, label %23, label %13

13:                                               ; preds = %0
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* @MAX_GROUPS, align 4
  %16 = icmp sge i32 %14, %15
  br i1 %16, label %23, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* %2, align 4
  %19 = icmp sle i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i32, i32* %2, align 4
  %22 = icmp sge i32 %21, 128
  br i1 %22, label %23, label %24

23:                                               ; preds = %20, %17, %13, %0
  br label %39

24:                                               ; preds = %20
  %25 = load i32, i32* %2, align 4
  %26 = load i32*, i32** @GT, align 8
  %27 = load i32, i32* %1, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  store i32 %25, i32* %29, align 4
  %30 = load i32, i32* %1, align 4
  %31 = load i32, i32* @Gc, align 4
  %32 = icmp sge i32 %30, %31
  br i1 %32, label %33, label %36

33:                                               ; preds = %24
  %34 = load i32, i32* %1, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* @Gc, align 4
  br label %36

36:                                               ; preds = %33, %24
  %37 = load i32, i32* @adj_rec, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* @adj_rec, align 4
  br label %39

39:                                               ; preds = %36, %23
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
